性能优化相关命令